NXT-129 Fix odd wrapping on provisional schedule definition list

--- a/web/src/components/DefinitionList/DefinitionList.module.scss
+++ b/web/src/components/DefinitionList/DefinitionList.module.scss
@@ -6,6 +6,11 @@
   flex-flow: row wrap;
   margin: 0;
 
+  div {
+    display: flex;
+    flex-basis: 100%;
+  }
+
   dt {
     padding-right: utils.rem(spacing.$small);
   }
